# ibbis-common-mechanism

./: pyproject.toml
commec/: flag.py
commec/screeners/: check_biorisk.py  check_low_concern.py
commec/tests/: test_flag.py
commec/tests/test_data/: functional.json
commec/tools/: hmmer.py
commec/utils/: json_html_output.py  template.html
conda-recipe/: meta.yaml
frontend/: app.py
