[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commec"
version = '1.0.3'
requires-python = ">=3.10"
# This is not a pure python project; dependencies are managed through environment.yml
authors = [
  { name = "Nicole Wheeler" },
  { name = "Jen Lu" },
  { name = "Michael Barnett" },
  { name = "Tessa Alexanian", email = "tessa@ibbis.bio" },
]
maintainers = [
  { name = "International Biosecurity and Biosafety Initiative for Science (IBBIS)", email = "info@ibbis.bio" },
]
description = 'Free, open-source, globally available tool for DNA sequence screening'
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["synthesis screening", "DNA synthesis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "bio>=1.8.1",
    "biopython>=1.87",
    "mako>=1.3.11",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pytaxonkit",
    "pyyaml>=6.0.3",
    "streamlit>=1.56.0",
]

[project.urls]
Homepage = "https://ibbis.bio/common-mechanism"
Repository = "https://github.com/ibbis-screening/common-mechanism.git"

[project.scripts]
"commec" = "commec.cli:main"

[tool.setuptools]
packages = { find = { "include" = ["commec", "commec.*"] } }
package-data = { "commec" = ["utils/template.html", "screen-default-config.yaml"] }

[tool.uv.sources]
pytaxonkit = { git = "https://github.com/bioforensics/pytaxonkit" }

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
]
